fixed a layout issue

--- a/utilities.css
+++ b/utilities.css
@@ -103,14 +103,14 @@
 
 .collapsible-content p {
   margin: 0.5rem 0;
-  margin-top: 2.0%;
+  margin-top: 5%;
 }
 
 .collapsible-content ul {
   list-style-type: disc;
   padding-left: 1.5rem;
   margin: 0.5rem 0;
-  margin-top: 1.9%;
+  margin-top: 8.9%;
 }
 
 /* SEPARATOR */
